2020-11-17  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): add flag -p to change the port

2020-11-10  Omar Polo  <op@omarpolo.com>

	* ChangeLog: 1.3 tagged, fixed ChangeLog format

	* gmid.c (open_file): added support for path parameters for CGI
	scripts

2020-11-06  Omar Polo  <op@omarpolo.com>

	* gmid.1: great improvements to the documentation

	* gmid.c (url_after_proto): ensure that the requested protocol is
	“gemini” and not something else that’s long 6 bytes.

	* gmid.c (loop): added support for cgi scripts (can handle multiple
	concurrently)

2020-11-06  Omar Polo  <op@venera>

	* gmid.1: added option to log to a file

2020-11-05  Omar Polo  <op@omarpolo.com>

	* gmid.c (filetypes): add MIME type for xml files

2020-11-03  Omar Polo  <op@omarpolo.com>

	* 1.2 tagged

	* gmid.c (main): ignore SIGPIPE

2020-10-14  Omar Polo  <op@omarpolo.com>

	* 1.1 tagged

	* switching to mmap() based file handling

2020-10-07  Omar Polo  <op@omarpolo.com>

	* 1.0 tagged